updated statusHistory endpoint